--- a/movil/src/app/categorias/categorias.page.html
+++ b/movil/src/app/categorias/categorias.page.html
@@ -7,20 +7,20 @@
 <ion-content>
     <div class="contenedor-principal">
       <div class="imagen">
-        <img src="assets/img/menu.png">
+        <img src="assets/img/fondo4.png">
       </div>
-      <button ion-button class="boton" routerLink="/mis-casas">
-        <ion-img class="imagen-boton" src="assets/img/micasa.png" ></ion-img>
-        <ion-label class="titulo">Mis casas</ion-label>
+      <button ion-button class="boton" routerLink="/tabs/mis-casas">
+        <ion-img class="imagen-boton" src="assets/img/equipo.png" ></ion-img>
+        <ion-label class="titulo">Personal Medico</ion-label>
       </button>
-      <button ion-button class="boton" routerLink="/prediccion">
-        <ion-img class="imagen-boton" src="assets/img/predecir.png" ></ion-img>
-        <ion-label class="titulo">Predecir</ion-label>
+      <button ion-button class="boton" routerLink="/tabs/prediccion">
+        <ion-img class="imagen-boton" src="assets/img/prediccion.png" ></ion-img>
+        <ion-label class="titulo">Predecir salud</ion-label>
       </button>
-      <button ion-button class="boton" routerLink="/visitar-casas">
-        <ion-img class="imagen-boton" src="assets/img/visitarcasa.png" ></ion-img>
-        <ion-label class="titulo">Visitar casas</ion-label>
+      <button ion-button class="boton" routerLink="/tabs/detalle">
+        <ion-img class="imagen-boton" src="assets/img/pacie.png" ></ion-img>
+        <ion-label class="titulo">Registro de pacientes</ion-label>
       </button>
     </div>
 
-</ion-content>t>
+</ion-content>
