--- a/movil/src/app/home/home.page.html
+++ b/movil/src/app/home/home.page.html
@@ -1,17 +1,11 @@
-<h1>hol </h1>
-
-<ion-content>
-    <!-- <div class="background-container">
-      <img src="/assets/imagenes/fondo2.png" height="100%" width="100%" alt="">
-    </div> -->
+<!-- <ion-content>
       <div class="contenedor-principal">
         <div class="contenido">
           <ion-text color="primary">
             <h2>
-              <!-- <img class="logo" src="/assets/imagenes/logo.png" > -->
             Bienvenidos
             <br>a
-            <br>Predict  <font style="color: goldenrod;">$ </font>  House
+            <br>  <font style="color:#7175b5;">Predict Disease</font>
             </h2>
           </ion-text>
         </div>
@@ -20,4 +14,23 @@
         <ion-spinner name="lines"></ion-spinner>
       </div>
       <app-tabs></app-tabs>
+  </ion-content> -->
+
+  <ion-content>
+    <div class="contenedor-principal">
+      <div class="contenido">
+        <ion-img src="assets/img/logo5.png" class="logo"></ion-img>
+        <ion-text color="primary">
+          <h2>
+            Bienvenidos
+            <br>a
+            <br>  <font style="color:#7175b5;">Predict Disease</font>
+          </h2>
+        </ion-text>
+      </div>
+    </div>
+    <div class="spinner-container">
+      <ion-spinner name="lines"></ion-spinner>
+    </div>
+    <app-tabs></app-tabs>
   </ion-content>
