--- a/movil/src/app/mis-casas/mis-casas.page.html
+++ b/movil/src/app/mis-casas/mis-casas.page.html
@@ -1,39 +1,26 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
-    <ion-title>mis casas</ion-title>
+    <ion-title>Enfermedades</ion-title>
   </ion-toolbar>
 </ion-header>
+
+
 
 <ion-content>
   <div class="container">
 
-    <div class="row height d-flex justify-content-center align-items-center">
-
-      <div class="col-md-8">
-
-        <div class="search">
-          <i class="fa fa-search"></i>
-          <input type="text" class="form-control" placeholder="Have a question? Ask Now">
-          <button class="btn btn-primary">Search</button>
-        </div>
-
-      </div>
-
-    </div>
 </div>
 <section class="articles">
   <article>
     <div class="article-wrapper">
       <figure>
-        <img src="https://picsum.photos/id/1011/800/450" alt="" />
+        <img src="https://img2.rtve.es/i/?w=1600&i=1653492296619.jpg" alt="" />
       </figure>
       <div class="article-body">
-        <h2>This is some title</h2>
-        <p>
-          Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet, congue bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
-        </p>
-        <a href="#" class="read-more">
-          Read more <span class="sr-only">about this is some title</span>
+        <h2>Diabetes</h2>
+
+        <a [routerLink]="['/tabs/prediccion']" class="read-more">
+          ir a predecir <span class="sr-only">about this is some title</span>
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
           </svg>
@@ -45,15 +32,13 @@
 
     <div class="article-wrapper">
       <figure>
-        <img src="https://picsum.photos/id/1005/800/450" alt="" />
+        <img src="https://doctoronline.mx/wp-content/uploads/2020/11/anemia-1.jpg.webp" alt="" />
       </figure>
       <div class="article-body">
-        <h2>This is some title</h2>
-        <p>
-          Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet, congue bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
-        </p>
-        <a href="#" class="read-more">
-          Read more <span class="sr-only">about this is some title</span>
+        <h2>Anemia</h2>
+
+        <a [routerLink]="['/tabs/prediccion']" class="read-more">
+          ir a predecir <span class="sr-only">about this is some title</span>
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
           </svg>
@@ -65,15 +50,13 @@
 
     <div class="article-wrapper">
       <figure>
-        <img src="https://picsum.photos/id/103/800/450" alt="" />
+        <img src="https://www.nnmc.com/sites/nnmc.com/files/what-are-the-signs-of-lung-cancer-450x300.png" alt="" />
       </figure>
       <div class="article-body">
-        <h2>This is some title</h2>
-        <p>
-          Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet, congue bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
-        </p>
-        <a href="#" class="read-more">
-          Read more <span class="sr-only">about this is some title</span>
+        <h2>CancerdePulmon</h2>
+
+        <a [routerLink]="['/tabs/prediccion']" class="read-more">
+          ir a redecir <span class="sr-only">about this is some title</span>
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
           </svg>
@@ -82,5 +65,84 @@
     </div>
   </article>
 </section>
-</ion-content>
 
+</ion-content>  -->
+
+
+
+
+
+
+
+
+
+
+
+
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Personal Médico</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Dr. Juan Pérez</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-icon name="person" slot="start"></ion-icon>
+        <ion-label>Nombre: Juan </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="call" slot="start"></ion-icon>
+        <ion-label>Apellido: Perez Flores</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="mail" slot="start"></ion-icon>
+        <ion-label>Email: juanperez@example.com</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Dra. Ana Guzman</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-icon name="person" slot="start"></ion-icon>
+        <ion-label>Nombre: Ana </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="call" slot="start"></ion-icon>
+        <ion-label>Apellido: Guzman Gomez</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="mail" slot="start"></ion-icon>
+        <ion-label>Email: analopez@example.com</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Dra. Jose López</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-icon name="person" slot="start"></ion-icon>
+        <ion-label>Nombre: Jose </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="call" slot="start"></ion-icon>
+        <ion-label>Apellido: López Rojas</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="mail" slot="start"></ion-icon>
+        <ion-label>Email: Joselopez@example.com</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
