--- a/movil/src/app/tabs/tabs.page.html
+++ b/movil/src/app/tabs/tabs.page.html
@@ -1,29 +1,23 @@
-<ion-content>
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
 
-      <ion-tab-button tab="home" routerLink="/home">
 
-        <ion-icon name="home"></ion-icon>
-        <ion-label>Inicio</ion-label>
-      </ion-tab-button>
 
-      <ion-tab-button tab="categoria" routerLink="/categorias">
-        <ion-icon name="layers"></ion-icon>
-        <ion-label>categorias</ion-label>
-      </ion-tab-button>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
 
-      <ion-tab-button tab="categoria" routerLink="/prediccion">
-        <ion-icon name="duplicate"></ion-icon>
-        <ion-label>predicciones</ion-label>
-      </ion-tab-button>
+    <ion-tab-button tab="categorias" routerLink="/categorias">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-tab-button>
 
-      <ion-tab-button tab="perfil" routerLink="/perfil">
-        <ion-icon name="person"></ion-icon>
-        <ion-label>perfil</ion-label>
-      </ion-tab-button>
+    <ion-tab-button tab="prediccion" routerLink="/tabs/prediccion">
+      <ion-icon name="git-branch-outline"></ion-icon>
+      <ion-label>prediccion</ion-label>
+    </ion-tab-button>
 
-    </ion-tab-bar>
-  </ion-tabs>
-</ion-content>
+    <ion-tab-button tab="perfil" routerLink="/tabs/perfil">
+      <ion-icon name="person"></ion-icon>
+      <ion-label>perfil</ion-label>
+    </ion-tab-button>
 
+  </ion-tab-bar>
+</ion-tabs>
