--- a/movil/src/app/home/home.page.scss
+++ b/movil/src/app/home/home.page.scss
@@ -1,35 +1,64 @@
 
 
 .background-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
 
-  .contenedor-principal {
-    position: relative;
-    top: 30% ;
-    left: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    transform: translate(-50%, -50%);
-  }
-  // .contenedor-principal {
-  //   position: relative;
-  //   top: 50%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  //   text-align: center;
-  // }
+.contenedor-principal {
+  position: relative;
+  top: 30% ;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+// .contenedor-principal {
+//   position: relative;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   text-align: center;
+// }
 
-  .spinner-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+.spinner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.contenido {
+  position: relative;
+}
+
+// .logo {
+//   position: absolute;
+//   top: -70%;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   z-index: 1;
+//   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+// }
+.logo {
+  width: 80px;
+  margin: auto;
+}
+
+.logo img {
+  width: 100%;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 0px 3px #5f5f5f,
+      0px 0px 0px 5px #ecf0f3,
+      8px 8px 15px #a7aaa7,
+      -8px -8px 15px #fff;
+}
