--- a/movil/src/app/login/login.page.html
+++ b/movil/src/app/login/login.page.html
@@ -1,7 +1,7 @@
   <ion-content>
     <div class="wrapper">
       <div class="logo">
-          <img src="./assets/img/logo.png" alt="">
+        <img src="./assets/img/logo5.png" alt="">
       </div>
       <div class="text-center mt-4 name">
           INICIAR SESION
